k8s/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: my-node-app-v1

spec: 
  replicas: 1

  selector:
    matchLabels: 
      app: my-node-app
      version: v1
  
  template:
    metadata:
      labels: 
        app: my-node-app
        version: v1
    
    spec: 
      containers:
      - name: my-node-app
        image: hritikraj8804/my-node-app:v1
        ports:
        - containerPort: 3000
