k8s/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: my-node-app-v2

spec: 
  replicas: 1

  selector:
    matchLabels: 
      app: my-node-app
      version: v2
  
  template:
    metadata:
      labels: 
        app: my-node-app
        version: v2
    
    spec: 
      containers:
      - name: my-node-app
        image: hritikraj8804/my-node-app:v2   

      ports:
      - containerPort: 3000
