k8s/service.yaml
apiVersion: v1
kind: Service

metadata: 
  name: my-node-app-service

spec:
  selector:
    app: my-node-app

  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000

  type: ClusterIP
